[gd_scene load_steps=6 format=2]

[ext_resource path="res://theme/monsterfangen.tres" type="Theme" id=1]
[ext_resource path="res://assets/interface/missingno.png" type="Texture" id=2]
[ext_resource path="res://scripts/PartyScreen.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.235294, 0.235294, 0.235294, 0 )

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.368627, 0.505882, 0.67451, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.447059, 0.611765, 0.772549, 1 )
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="PartyScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 385.0
margin_bottom = 785.0
custom_constants/separation = 20

[node name="monster_panel0" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_right = 370.0
margin_bottom = 70.0
custom_styles/panel = SubResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/monster_panel0"]
margin_left = 10.0
margin_top = 10.0
margin_right = 360.0
margin_bottom = 60.0

[node name="TextureRect" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/monster_panel0/HBoxContainer"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/monster_panel0/HBoxContainer"]
margin_left = 54.0
margin_right = 350.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="monster_name" type="Label" parent="Panel/MarginContainer/VBoxContainer/monster_panel0/HBoxContainer/VBoxContainer"]
margin_right = 296.0
margin_bottom = 15.0
size_flags_vertical = 0
text = "Monster_name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="monster_hp" type="Label" parent="Panel/MarginContainer/VBoxContainer/monster_panel0/HBoxContainer/VBoxContainer"]
margin_top = 19.0
margin_right = 296.0
margin_bottom = 34.0
size_flags_vertical = 0
text = "100 / 100"

[node name="monster_panel1" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 370.0
margin_bottom = 160.0
custom_styles/panel = SubResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/monster_panel1"]
margin_left = 10.0
margin_top = 10.0
margin_right = 360.0
margin_bottom = 60.0

[node name="TextureRect" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/monster_panel1/HBoxContainer"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/monster_panel1/HBoxContainer"]
margin_left = 54.0
margin_right = 350.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="monster_name" type="Label" parent="Panel/MarginContainer/VBoxContainer/monster_panel1/HBoxContainer/VBoxContainer"]
margin_top = 8.0
margin_right = 296.0
margin_bottom = 23.0
size_flags_vertical = 10
text = "Monster_name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="monster_hp" type="Label" parent="Panel/MarginContainer/VBoxContainer/monster_panel1/HBoxContainer/VBoxContainer"]
margin_top = 27.0
margin_right = 296.0
margin_bottom = 42.0
size_flags_vertical = 2
text = "100 / 100"

[node name="monster_panel2" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 180.0
margin_right = 370.0
margin_bottom = 250.0
custom_styles/panel = SubResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/monster_panel2"]
margin_left = 10.0
margin_top = 10.0
margin_right = 360.0
margin_bottom = 60.0

[node name="TextureRect" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/monster_panel2/HBoxContainer"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/monster_panel2/HBoxContainer"]
margin_left = 54.0
margin_right = 350.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="monster_name" type="Label" parent="Panel/MarginContainer/VBoxContainer/monster_panel2/HBoxContainer/VBoxContainer"]
margin_top = 8.0
margin_right = 296.0
margin_bottom = 23.0
size_flags_vertical = 10
text = "Monster_name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="monster_hp" type="Label" parent="Panel/MarginContainer/VBoxContainer/monster_panel2/HBoxContainer/VBoxContainer"]
margin_top = 27.0
margin_right = 296.0
margin_bottom = 42.0
size_flags_vertical = 2
text = "100 / 100"

[node name="monster_panel3" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 270.0
margin_right = 370.0
margin_bottom = 340.0
custom_styles/panel = SubResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/monster_panel3"]
margin_left = 10.0
margin_top = 10.0
margin_right = 360.0
margin_bottom = 60.0

[node name="TextureRect" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/monster_panel3/HBoxContainer"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/monster_panel3/HBoxContainer"]
margin_left = 54.0
margin_right = 350.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="monster_name" type="Label" parent="Panel/MarginContainer/VBoxContainer/monster_panel3/HBoxContainer/VBoxContainer"]
margin_top = 8.0
margin_right = 296.0
margin_bottom = 23.0
size_flags_vertical = 10
text = "Monster_name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="monster_hp" type="Label" parent="Panel/MarginContainer/VBoxContainer/monster_panel3/HBoxContainer/VBoxContainer"]
margin_top = 27.0
margin_right = 296.0
margin_bottom = 42.0
size_flags_vertical = 2
text = "100 / 100"

[node name="monster_panel4" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 360.0
margin_right = 370.0
margin_bottom = 430.0
custom_styles/panel = SubResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/monster_panel4"]
margin_left = 10.0
margin_top = 10.0
margin_right = 360.0
margin_bottom = 60.0

[node name="TextureRect" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/monster_panel4/HBoxContainer"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/monster_panel4/HBoxContainer"]
margin_left = 54.0
margin_right = 350.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="monster_name" type="Label" parent="Panel/MarginContainer/VBoxContainer/monster_panel4/HBoxContainer/VBoxContainer"]
margin_top = 8.0
margin_right = 296.0
margin_bottom = 23.0
size_flags_vertical = 10
text = "Monster_name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="monster_hp" type="Label" parent="Panel/MarginContainer/VBoxContainer/monster_panel4/HBoxContainer/VBoxContainer"]
margin_top = 27.0
margin_right = 296.0
margin_bottom = 42.0
size_flags_vertical = 2
text = "100 / 100"

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 450.0
margin_right = 370.0
margin_bottom = 470.0
custom_constants/separation = 20

[node name="back_button" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 490.0
margin_right = 370.0
margin_bottom = 540.0
rect_min_size = Vector2( 0, 50 )
text = "Back to Menu"

[connection signal="button_up" from="Panel/MarginContainer/VBoxContainer/back_button" to="." method="_on_back_button_button_up"]
